# ouroboros

./: .gitignore  README.md  USAGE.md  pyproject.toml
.cursor/rules/: fixtures.mdc
.github/workflows/: ci.yml  publish.yml  test.yml
crates/ouroboros-cli/: Cargo.toml
crates/ouroboros-cli/src/: main.rs  output.rs  report.rs
crates/ouroboros-cli/tests/: ancestor_init.rs  format_json.rs  package_filter.rs  package_relative_init.rs  report.rs  trace.rs
crates/ouroboros-cli/tests/fixtures/ancestor_init/: oboros.toml
crates/ouroboros-cli/tests/fixtures/ancestor_init/src/alpha/: __init__.py
crates/ouroboros-cli/tests/fixtures/ancestor_init/src/beta/: helpers.py
crates/ouroboros-cli/tests/fixtures/ancestor_init/src/pkg/: __init__.py  a.py  b.py
crates/ouroboros-cli/tests/fixtures/ancestor_init/src/pkg/sub/: leaf.py
crates/ouroboros-cli/tests/fixtures/impact_branch/src/app/: core_a.py  entry.py  isolated.py  mid.py
crates/ouroboros-cli/tests/fixtures/multi_pkg/src/auth/: c.py
crates/ouroboros-cli/tests/fixtures/multi_pkg/src/models/: x.py
crates/ouroboros-cli/tests/fixtures/package_relative_init/src/: consumer.py
crates/ouroboros-cli/tests/fixtures/package_relative_init/src/svc/: __init__.py  staff.py
crates/ouroboros-core/: Cargo.toml
crates/ouroboros-core/src/: config.rs  lib.rs
crates/ouroboros-core/src/cycles/: filter.rs  mod.rs
crates/ouroboros-core/src/discovery/: error.rs  mod.rs  module_name.rs  walk.rs
crates/ouroboros-core/src/graph/: build.rs  impact.rs  mod.rs  scc.rs
crates/ouroboros-core/src/parser/: error.rs  imports.rs  mod.rs
crates/ouroboros-core/src/resolver/: error.rs  index.rs  mod.rs  relative.rs  resolve.rs
fixtures/: generate.py
