[package]
name = "ouroboros-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oboros"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ouroboros-core = { path = "../ouroboros-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
