[package]
name = "ouroboros-cli"
version = "0.3.1"
edition = "2024"

[[bin]]
name = "oboros"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
ouroboros-core = { path = "../ouroboros-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
